	    Added tv_timerbounds() that monitors time targets vs.
	    current time value -- if machine has hibernated a lot
	    without running timers and the 'now' jumps ahead a lot
	    (or backwards for complete coverage), then the target
	    time is reset.  This avoids running a burst of beacon
	    events when 'now' jumps ahead a lot, as an example.

2014-02-13 Forgot to record the author

	* debian/control:
	    Add build and run dependency of OpenSSL.
	    (Actually not yet necessary, SSL support is not being
	     compilable / compiled yet.)

2014-02-13 Heikki Hannikainen <hes@aprs.fi>

	* parse_aprs.c:
	    Check that the timestamp ends with one of valid timestamp type ids.
	    Those being: 'z', 'h', '/'

2014-02-03 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* ttyreader.c:
	    Read only when poll reports data availability.  (uh3ack)

2014-02-01 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* rpm/aprx.spec.in:
	    Forcing RPM building to produce i386 package.
	    (There is no need to produce x86-64 binary package.
	     Small footprint is the goal.)

	* erlang.c:
	    Do not call aprx_syslog_init() from this module.

	* ssl.c, ssl.h, hlog.c, hlog.h:
	    Copied SSL client code material from Aprsc. Not yet functional.

	* agwpesocket.c, beacon.c, digipeater.c, dupecheck.c, erlang.c,
	  telemetry.c, ttyreader.c:
	    If the time reported by time(2) seems to jump ahead or backwards
	    too much, various deadline schedulers keeping time goals in mind
	    will reset themselves upon detection of the condition.

2013-11-01 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* historydb.c:
	    Initialize also tokenbucket value so that freshly arrived
	    packet at the historydb will have at least 1.0 tokens
	    at hand to permit one initial digipeat. Will not be enough
	    for multi-transmitter case.

	* digipeater.c:
	    Display Ratelimit caused packet drops at all debug levels.
	    ( Instead of >1 )

	* filter.c: